--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="bg">
-      <img src="../public/img/bg.png" alt="bg">
+      <img src="./Dasha/../public/img/bg.png" alt="bg">
     </div>
     <div id="app"></div>
     <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
